--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -1,3 +1,8 @@
 ---
 
 hiera_level: development
+databasename  : drupal1
+dbuser        : drupal2
+dbpasswd      : t0T@lly!@!P4$5w3rB
+dbhost        : db1.example.gov
+
