--- a/hiera.yaml
+++ b/hiera.yaml
@@ -7,4 +7,4 @@
   - global
 
 :yaml:
-  :datadir: '/etc/puppetlabs/puppet/hiera/%{environment}/hieradata
+  :datadir: '/etc/puppetlabs/puppet/hiera/%{environment}/hieradata'
